# exoring

./: README.md  exoring.py  gpu_config.cfg  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/source/: conf.py  exoring.rst  index.rst  modules.rst
src/exoring/: __init__.py  exoring.py  exoring_gpu.py
tests/: opacity_image_gen_test_data.npz  quad_limb_dark_test_data.npz  test_exoring.py  transit_lc_gen_test_data.npz
