[metadata]
name = exoring
description = ringed exoplanet transit modelling and fitting codes
author = Leigh C. Smith
license = GNU GPLv3
license_file = LICENSE
classifiers =


[options]
packages = exoring
install_requires =
    numpy>=1.15
    numba>=0.49
python_requires = >=3.6
package_dir =
    =src
zip_safe = False