[metadata]
name = exoring
version = 1.0a
description = ringed exoplanet transit modelling and fitting codes
author = Leigh C. Smith
license = GNU GPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = exoring
install_requires =
    numpy>=1.15
    numba>=0.49
    configobj>=5.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 80